--- a/lib/QUI/Tags/Controls/TagList.css
+++ b/lib/QUI/Tags/Controls/TagList.css
@@ -1,8 +1,14 @@
 @CHARSET "UTF-8";
 
 .quiqqer-tags-menu {
+    background: #DDD;
     margin: 20px 0 0 0;
     padding: 0 !important;
+}
+
+.quiqqer-tags-menu li {
+    list-style-type: none;
+    padding: 0;
 }
 
 .quiqqer-tags-menu-tags-menu .entry {
@@ -32,20 +38,28 @@
     color: #fff !important;
 }
 
-.quiqqer-tags-list {
+.quiqqer-tags-list-result {
     float: left;
     clear: both;
     margin: 40px 0 0 0;
 }
 
-.quiqqer-tags-list ul {
+.quiqqer-tags-list-result-ul {
     padding: 0 !important;
 }
 
-.quiqqer-tags-list li {
+.quiqqer-tags-list-result-li {
     list-style-type: none;
     margin: 0;
-    padding: 0 20px 20px 20px;
+    padding: 20px;
     min-height: 200px;
     border-bottom: 1px solid #D0D3D3;
+}
+
+.quiqqer-tags-list-result-header-link {
+    text-decoration: none;
+}
+
+.quiqqer-tags-list-result-header-link:hover {
+    text-decoration: underline;
 }
