--- a/lib/QUI/Tags/Controls/TagList.css
+++ b/lib/QUI/Tags/Controls/TagList.css
@@ -38,6 +38,9 @@
     color: #fff !important;
 }
 
+/** result list
+ * =============================================== */
+
 .quiqqer-tags-list-result {
     float: left;
     clear: both;
@@ -63,3 +66,8 @@
 .quiqqer-tags-list-result-header-link:hover {
     text-decoration: underline;
 }
+
+.quiqqer-tags-list-result-image {
+    max-width: 100%;
+}
+
