--- a/bin/TagContainer.css
+++ b/bin/TagContainer.css
@@ -1,6 +1,14 @@
 @CHARSET "UTF-8";
 
 .qui-tags-container {
+    clear: both;
+    float: left;
+    max-width: 100%;
+    padding: 10px;
+    width: 600px;
+}
+
+.qui-tags-container-list {
     border: 1px solid #999;
     clear: both;
     float: left;
