--- a/bin/TagContainer.css
+++ b/bin/TagContainer.css
@@ -70,6 +70,11 @@
     width: 100%;
 }
 
+.qui-panel-sheet-body p {
+    width: 100%;
+}
+
+
 .qui-tags-container-info {
     clear: both;
     float: left;
