--- a/types/tag-search.css
+++ b/types/tag-search.css
@@ -9,11 +9,15 @@
 
 .quiqqer-tags-search-available,
 .quiqqer-tags-search-results {
-    border-top: 1px solid rgba(0,0,0,0.2);
     float: left;
-    margin-top: 20px;
-    padding-top: 40px;
     width: 100%;
+}
+
+.quiqqer-tags-search-available {
+    border-top: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    margin: 20px 0;
+    padding: 40px 0;
 }
 
 .quiqqer-tags-search-available h3,
@@ -73,7 +77,7 @@
 .quiqqer-tags-search-results {
     float: left;
     clear: both;
-    margin: 40px 0 0 0;
+    margin: 0;
 }
 
 .quiqqer-tags-search-result-entry {
