--- a/bin/TagContainer.css
+++ b/bin/TagContainer.css
@@ -89,7 +89,8 @@
 }
 
 .qui-tags-container-window-container {
-    height: calc(100% - 40px);
+    height: calc(100% - 30px);
+    margin-top: 10px;
     overflow: auto;
     padding: 10px;
 }
