--- a/lib/QUI/Tags/Controls/SiteTags.css
+++ b/lib/QUI/Tags/Controls/SiteTags.css
@@ -29,3 +29,7 @@
     background-color: #FFFFFF;
     text-decoration: none !important;
 }
+
+.qui-tags-sitetags-content {
+    margin-bottom: 20px;
+}
