bakground bei tag icon verbessert

--- a/types/tag-listing.css
+++ b/types/tag-listing.css
@@ -45,6 +45,9 @@
 }
 
 .quiqqer-tags-list-result-entry-imgplaceholder {
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
     float: left;
     height: 100px;
     margin: 0 10px 0 0;
