--- a/types/tag-search.css
+++ b/types/tag-search.css
@@ -121,7 +121,7 @@
 
 .quiqqer-tags-search-result-entry-text {
     float: left;
-    width: calc( 100% - 110px )
+    width: calc( 100% - 120px )
 }
 
 .quiqqer-tags-search-result-entry-header-link:hover {
@@ -157,6 +157,34 @@
 .quiqqer-tags-search-result-entry .qui-tags-sitetags {
     float: left;
 }
+
+.quiqqer-tags-search-entry-image-div {
+    float: left;
+    width: 120px;
+    height: 80px;
+    text-align: center;
+    transform-style: preserve-3d;
+}
+
+.quiqqer-tags-search-entry-image-img {
+    max-width: 100px;
+    max-height: 80px;
+    width: auto;
+    height: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/*.quiqqer-tags-list-result-entry-imgplaceholder {
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    float: left;
+    height: 100px;
+    margin: 0 10px 0 0;
+    width: 100px;
+}*/
 
 
 /** tag
