--- a/types/tag-search.css
+++ b/types/tag-search.css
@@ -195,7 +195,7 @@
     border: 1px solid #D6D9D9;
     border-radius: 3px;
         -webkit-border-radius: 3px;
-    color: #99A2A6 !important;
+    color: #99A2A6;
     cursor: pointer;
     float: left;
     margin: 0 5px 5px 0;
