chore: tag container control verbessert; clear und adding verbessert

--- a/bin/TagContainer.css
+++ b/bin/TagContainer.css
@@ -14,6 +14,7 @@
     border: 1px solid #cfd2d2;
     clear: both;
     float: left;
+    height: calc(100% - 30px);
     max-width: 100%;
     overflow: auto;
     padding: 10px;
@@ -71,7 +72,6 @@
 .qui-panel-sheet-body p {
     width: 100%;
 }
-
 
 .qui-tags-container-info {
     clear: both;
