feat: Gruppen löschen / bearbeiten in Tabelle; Gruppen-Filter in Tag-Browser

--- a/bin/search/Search.css
+++ b/bin/search/Search.css
@@ -16,6 +16,11 @@
     width: 33.333%;
 }
 
+.quiqqer-tags-search-group-select {
+    margin-top: 10px;
+    width: 100%;
+}
+
 .quiqqer-tags-search-freetext {
     float: left;
     margin-left: 10px;
