refactor: Rechter Padding in Tag Search war zu groß

--- a/types/tag-search.css
+++ b/types/tag-search.css
@@ -71,174 +71,7 @@
     width: 100%;
 }
 
-/** result
- * ========================================== */
-
-/*.quiqqer-tags-search-results {
-    float: left;
-    clear: both;
-    margin: 0;
-}
-
-.quiqqer-tags-search-result-entry {
-    border-bottom: 1px solid #D0D3D3;
-    list-style-type: none;
-    width: 100%;
-    background: #f8f8f8;
-    margin: 20px 0;
-    padding: 10px;
-}
-
-.quiqqer-tags-search-result-entry:last-child {
-    border-bottom: 1px solid #FFFFff;
-}
-
-.quiqqer-tags-search-results .quiqqer-sheets {
-    clear: both;
-    float: left;
-    width: 100%;
-}
-
-.quiqqer-tags-search-results .quiqqer-sheets {
-    margin-bottom: 20px !important;
-}
-
-.quiqqer-tags-search-results .quiqqer-sheets:last-child {
-    margin-bottom: 0 !important;
-    margin-top: 40px !important;
-}
-
-.quiqqer-tags-search-result-entry-link {
-    float: left;
-    padding: 10px 0;
-    text-decoration: none;
-    width: 100%;
-    color: inherit;
-}
-
-.quiqqer-tags-search-result-entry h3 {
-    margin: 0 0 10px;
-    padding: 0;
-}
-
-.quiqqer-tags-search-result-entry-text {
-    float: left;
-    width: calc(100% - 140px)
-}
-
-.quiqqer-tags-search-result-entry-text h4 {
-    font-size: 1.8em;
-    font-weight: 400;
-}
-
-.quiqqer-tags-search-result-entry-header-link:hover {
-    text-decoration: none;
-}
-
-.quiqqer-tags-search-result-entry-image {
-    float: left;
-    margin: 0 10px 0 0;
-    max-width: 100%;
-}
-
-.quiqqer-tags-search-result-entry-imgplaceholder {
-    float: left;
-    height: 100px;
-    margin: 0 10px 0 0;
-    width: 100px;
-}
-
-.quiqqer-tags-search-result-entry-taglist {
-    clear: both;
-    padding: 10px 0;
-    width: 100%;
-    font-size: 90%;
-}
-
-.quiqqer-tags-search-result-entry-taglist .fa {
-    margin: 0 10px;
-    opacity: 0.5;
-}
-
-.quiqqer-tags-search-result-entry-tagText {
-    float: left;
-    line-height: 30px;
-    padding-right: 10px;
-}
-
-.quiqqer-tags-search-result-entry .qui-tags-sitetags {
-    float: none;
-    display: inline;
-}
-
-.quiqqer-tags-search-entry-image-div {
-    float: left;
-    width: 140px;
-    height: 80px;
-    text-align: center;
-    transform-style: preserve-3d;
-}
-
-.quiqqer-tags-search-entry-image-img {
-    max-width: 120px;
-    max-height: 100px;
-    width: auto;
-    height: auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}*/
-
-/*.quiqqer-tags-list-result-entry-imgplaceholder {
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    float: left;
-    height: 100px;
-    margin: 0 10px 0 0;
-    width: 100px;
-}*/
-
-/** tag
- * ========================================== */
-
-.quiqqer-tags-search-pool .qui-tags-tag,
-.tag-category .qui-tags-tag {
-    /*background: none;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-bottom: 1px solid transparent;
-    border-radius: 0;
-    -webkit-border-radius: 0;
-    color: #99A2A6;
-    cursor: pointer;
-    float: none !important;
-    margin: 0 0 5px 0;
-    padding: 2px 6px;
-    position: relative;
-    text-decoration: none !important;*/
-    background-color: #EFF0F0;
-    border: 1px solid #D6D9D9;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    color: #99A2A6 !important;
-    float: left;
-    margin: 0 5px 5px 0;
-    padding: 3px 10px;
-    position: relative;
-    text-decoration: none !important;
-}
-
-.quiqqer-tags-search-pool .qui-tags-tag:hover,
-.tag-category .qui-tags-tag:hover {
-    color: #899195;
-    background-color: #FFFFFF;
-    text-decoration: none !important;
-}
-
-
-/** NEW
+/** result - new
  * ========================================== */
 
 .quiqqer-tags-search-result-entry {
@@ -265,9 +98,9 @@
     font-size: 120px;
 }
 
-.quiqqer-tags-search-result-entry-content {
+.quiqqer-tags-search-result-entry-content.grid-60 {
     margin-bottom: 20px;
-    margin-right: 0;
+    padding-right: 0;
 }
 
 
@@ -351,4 +184,32 @@
         border: none;
         margin-bottom: 10px;
     }
+
+    .fa-tags {
+        margin-right: 10px;
+    }
+}
+
+/** tag
+ * ========================================== */
+
+.quiqqer-tags-search-pool .qui-tags-tag,
+.tag-category .qui-tags-tag {
+    background-color: #EFF0F0;
+    border: 1px solid #D6D9D9;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    color: #99A2A6 !important;
+    float: left;
+    margin: 0 5px 5px 0;
+    padding: 3px 10px;
+    position: relative;
+    text-decoration: none !important;
+}
+
+.quiqqer-tags-search-pool .qui-tags-tag:hover,
+.tag-category .qui-tags-tag:hover {
+    color: #899195;
+    background-color: #FFFFFF;
+    text-decoration: none !important;
 }
