--- a/bin/frontend/tags/Tag.css
+++ b/bin/frontend/tags/Tag.css
@@ -2,7 +2,7 @@
     background: #fff;
     border: 1px solid #EAECF0;
     border-radius: 5px;
-    cursor: pointer;
+    cursor: default;
     float: left;
     font-size: 12px;
     margin-right: 10px;
@@ -14,4 +14,8 @@
     margin-left: 5px;
     text-align: center;
     width: 20px;
+}
+
+.quiqqer-tags-tag--delete:hover {
+    background: rgba(0, 0, 0, 0.1);
 }
